{
  "version": 4,
  "terraform_version": "1.14.8",
  "serial": 28,
  "lineage": "41816c1d-f135-aa69-eb5f-7e9f9ef466e4",
  "resources": [
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_instance",
      "name": "api_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c0717dff8dafd4ca",
            "arn": "arn:aws:ec2:us-east-1:742932328627:instance/i-0f7b8afa7f2b09056",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f7b8afa7f2b09056",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "alchemyst-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0834a5505e2481b24",
            "private_dns": "ip-10-0-1-117.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.117",
            "public_dns": "ec2-100-55-50-152.compute-1.amazonaws.com",
            "public_ip": "100.55.50.152",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-05f8cd028c6c749ee",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0818d46e0db641509",
            "tags": {
              "Name": "alchemyst-api-gateway",
              "Role": "api-gateway"
            },
            "tags_all": {
              "Name": "alchemyst-api-gateway",
              "Role": "api-gateway"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-08363ed4216a6c895"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_ami.al2023",
            "module.compute.aws_key_pair.this",
            "module.security_groups.aws_security_group.api_gateway",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_instance",
      "name": "caller_worker",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c0717dff8dafd4ca",
            "arn": "arn:aws:ec2:us-east-1:742932328627:instance/i-0e2d93f74c079d0b4",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e2d93f74c079d0b4",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "alchemyst-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-00c81c759e886b8f8",
            "private_dns": "ip-10-0-2-24.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.24",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0845fd18b8eb86aaa",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04dc219217f289382",
            "tags": {
              "Name": "alchemyst-caller-worker",
              "Role": "caller-worker"
            },
            "tags_all": {
              "Name": "alchemyst-caller-worker",
              "Role": "caller-worker"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-03bce028074d7a4f3"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_ami.al2023",
            "module.compute.aws_instance.api_gateway",
            "module.compute.aws_key_pair.this",
            "module.security_groups.aws_security_group.api_gateway",
            "module.security_groups.aws_security_group.workers",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_instance",
      "name": "inference_worker",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c0717dff8dafd4ca",
            "arn": "arn:aws:ec2:us-east-1:742932328627:instance/i-0859a355da91df6cb",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0859a355da91df6cb",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "alchemyst-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-04ceac83784865aad",
            "private_dns": "ip-10-0-2-158.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.158",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-07d8d6ea8b5a1afa7",
                "volume_size": 40,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04dc219217f289382",
            "tags": {
              "Name": "alchemyst-inference-worker",
              "Role": "inference-worker"
            },
            "tags_all": {
              "Name": "alchemyst-inference-worker",
              "Role": "inference-worker"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-03bce028074d7a4f3"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_ami.al2023",
            "module.compute.aws_instance.api_gateway",
            "module.compute.aws_key_pair.this",
            "module.security_groups.aws_security_group.api_gateway",
            "module.security_groups.aws_security_group.workers",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "api_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:742932328627:security-group/sg-08363ed4216a6c895",
            "description": "API Gateway VM",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08363ed4216a6c895",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "iii HTTP engine - public API",
                "from_port": 3111,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3111
              },
              {
                "cidr_blocks": [
                  "10.0.2.0/24"
                ],
                "description": "iii WebSocket - workers only",
                "from_port": 49134,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 49134
              },
              {
                "cidr_blocks": [
                  "157.51.82.170/32"
                ],
                "description": "SSH admin",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "alchemyst-api-gateway-sg",
            "name_prefix": "",
            "owner_id": "742932328627",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "alchemyst-api-gateway-sg"
            },
            "tags_all": {
              "Name": "alchemyst-api-gateway-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0365884ca6efe3e0b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "workers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:742932328627:security-group/sg-03bce028074d7a4f3",
            "description": "Private workers - no internet inbound",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03bce028074d7a4f3",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "SSH via bastion (VM1 only)",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-08363ed4216a6c895"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "alchemyst-workers-sg",
            "name_prefix": "",
            "owner_id": "742932328627",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "alchemyst-workers-sg"
            },
            "tags_all": {
              "Name": "alchemyst-workers-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0365884ca6efe3e0b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.security_groups.aws_security_group.api_gateway",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0421bbb2b5e46bedf",
            "arn": "arn:aws:ec2:us-east-1:742932328627:elastic-ip/eipalloc-0421bbb2b5e46bedf",
            "association_id": "eipassoc-0df3b2221007de520",
            "domain": "vpc",
            "id": "eipalloc-0421bbb2b5e46bedf",
            "network_border_group": "us-east-1",
            "network_interface": "eni-04e357ed4ccd2ba29",
            "private_dns": "ip-10-0-1-248.ec2.internal",
            "private_ip": "10.0.1.248",
            "public_dns": "ec2-52-22-131-189.compute-1.amazonaws.com",
            "public_ip": "52.22.131.189",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "alchemyst-nat-eip"
            },
            "tags_all": {
              "Name": "alchemyst-nat-eip"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:742932328627:internet-gateway/igw-02097ae87628f59b8",
            "id": "igw-02097ae87628f59b8",
            "owner_id": "742932328627",
            "tags": {
              "Name": "alchemyst-igw"
            },
            "tags_all": {
              "Name": "alchemyst-igw"
            },
            "vpc_id": "vpc-0365884ca6efe3e0b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0421bbb2b5e46bedf",
            "association_id": "eipassoc-0df3b2221007de520",
            "connectivity_type": "public",
            "id": "nat-02d91a9bf1881a885",
            "network_interface_id": "eni-04e357ed4ccd2ba29",
            "private_ip": "10.0.1.248",
            "public_ip": "52.22.131.189",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0818d46e0db641509",
            "tags": {
              "Name": "alchemyst-nat"
            },
            "tags_all": {
              "Name": "alchemyst-nat"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:742932328627:route-table/rtb-0da6e48a2661b1eff",
            "id": "rtb-0da6e48a2661b1eff",
            "owner_id": "742932328627",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-02d91a9bf1881a885",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "alchemyst-private-rt"
            },
            "tags_all": {
              "Name": "alchemyst-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0365884ca6efe3e0b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:742932328627:route-table/rtb-0df3c3b21d1da30db",
            "id": "rtb-0df3c3b21d1da30db",
            "owner_id": "742932328627",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02097ae87628f59b8",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "alchemyst-public-rt"
            },
            "tags_all": {
              "Name": "alchemyst-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0365884ca6efe3e0b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03136ef510522c525",
            "route_table_id": "rtb-0da6e48a2661b1eff",
            "subnet_id": "subnet-04dc219217f289382"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-054a7c05859dd4bfd",
            "route_table_id": "rtb-0df3c3b21d1da30db",
            "subnet_id": "subnet-0818d46e0db641509"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:742932328627:subnet/subnet-04dc219217f289382",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04dc219217f289382",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "742932328627",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "alchemyst-private-subnet"
            },
            "tags_all": {
              "Name": "alchemyst-private-subnet"
            },
            "vpc_id": "vpc-0365884ca6efe3e0b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:742932328627:subnet/subnet-0818d46e0db641509",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0818d46e0db641509",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "742932328627",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "alchemyst-public-subnet"
            },
            "tags_all": {
              "Name": "alchemyst-public-subnet"
            },
            "vpc_id": "vpc-0365884ca6efe3e0b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:742932328627:vpc/vpc-0365884ca6efe3e0b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-08e515eb651795605",
            "default_route_table_id": "rtb-0e15b3094f46af644",
            "default_security_group_id": "sg-0918b631840ab93e0",
            "dhcp_options_id": "dopt-08a9c482313c6f927",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0365884ca6efe3e0b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e15b3094f46af644",
            "owner_id": "742932328627",
            "tags": {
              "Name": "alchemyst-vpc"
            },
            "tags_all": {
              "Name": "alchemyst-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}